--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-boilerplate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://localhost/alarm/test",
+  "homepage": "http://localhost/alarm/demo",
   "repository": {
     "type": "git",
     "url": "https://gitlab.met.no/team-frontend/react-boilerplate.git"
