--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.8.0",
     "react-globe": "^4.0.0",
     "react-leaflet": "^2.7.0",
+    "react-push-notification": "^1.3.0",
     "react-qr-svg": "^2.3.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.1.2",
