--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-color": "^2.17.3",
     "react-dom": "^16.8.0",
     "react-globe": "^4.0.0",
+    "react-json-editor-ajrm": "^2.5.13",
     "react-leaflet": "^2.7.0",
     "react-push-notification": "^1.3.0",
     "react-qr-svg": "^2.3.0",
